--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "all": "^0.0.0",
     "axios": "^1.13.3",
     "modern-normalize": "^3.0.1",
+    "react-hot-toast": "^2.6.0",
     "react-paginate": "^8.3.0"
   }
 }
